syntax = "proto3";

package task;
option go_package = "./;pb";

service TaskService {
    rpc CreateTask(CreateTaskRequest) returns (CreateTaskReply) {}
    rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskReply) {}
    rpc ListTask(ListTaskRequest) returns (ListTaskReply) {}
    rpc ServiceStatus(ServiceStatusRequest) returns (ServiceStatusReply) {}
}

message Task {
    string id = 1;
    int64 userId = 2;
    string title = 3;
    string description = 4;
    string status = 5;
}

message CreateTaskRequest {
    Task task = 1;
}

message CreateTaskReply {
    string taskId = 1;
    string err = 2;
}

message DeleteTaskRequest {
    string taskId = 1;
    int64 userId = 2;
}

message DeleteTaskReply {
    string err = 1;
}

message ListTaskRequest {
    int64 userId = 1;
}

message ListTaskReply {
    repeated Task tasks = 1;
    string err = 2;
}

message ServiceStatusRequest {}

message ServiceStatusReply {
    int32 code = 1;
    string err = 2;
}
